removed memory settings