@@ -87,7 +87,7 @@
 			    <configuration>
 	    	        <forkCount>1</forkCount>
 	    	        <reuseForks>false</reuseForks>
-	    	        <argLine>-Xms128M -Xmx512m -XX:MaxPermSize=256m ${surefireArgLine}</argLine>
+	    	        <argLine>${surefireArgLine}</argLine>
 			    </configuration>
 			</plugin>
 			<plugin>
